RESOLVED FIXED 106344
[GTK][WK2] accessibility/placeholder.html is failing
https://bugs.webkit.org/show_bug.cgi?id=106344
Summary [GTK][WK2] accessibility/placeholder.html is failing
Zan Dobersek
Reported 2013-01-08 10:26:18 PST
The accessibility/placeholder.html layout test is failing on GTK WK2 port. Here's the diff: --- /home/zan/Dev/webkit/webkit/WebKitBuild/Release/layout-test-results/accessibility/placeholder-expected.txt +++ /home/zan/Dev/webkit/webkit/WebKitBuild/Release/layout-test-results/accessibility/placeholder-actual.txt @@ -4,8 +4,8 @@ On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". -PASS fieldElement.stringAttributeValue('AXPlaceholderValue') is 'search' -PASS pass.stringAttributeValue('AXPlaceholderValue') is 'Password' +FAIL fieldElement.stringAttributeValue('AXPlaceholderValue') should be search. Was . +FAIL pass.stringAttributeValue('AXPlaceholderValue') should be Password. Was . PASS successfullyParsed is true TEST COMPLETE
Attachments
Patch (4.20 KB, patch)
2013-05-24 02:32 PDT, Krzysztof Czech
no flags
Patch (4.18 KB, patch)
2013-05-24 05:53 PDT, Krzysztof Czech
gyuyoung.kim: review+
commit-queue: commit-queue-
Rebased patch (4.28 KB, patch)
2013-06-03 03:59 PDT, Krzysztof Czech
no flags
Krzysztof Czech
Comment 1 2013-05-24 02:32:44 PDT
Mario Sanchez Prada
Comment 2 2013-05-24 05:37:02 PDT
Comment on attachment 202792 [details] Patch Looks good to me
Krzysztof Czech
Comment 3 2013-05-24 05:53:00 PDT
Krzysztof Czech
Comment 4 2013-05-24 05:56:38 PDT
(In reply to comment #3) > Created an attachment (id=202806) [details] > Patch Deleted an empty line. Applied Mario's informal suggestion.
Gyuyoung Kim
Comment 5 2013-06-03 02:14:14 PDT
Comment on attachment 202806 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=202806&action=review > LayoutTests/platform/gtk-wk2/TestExpectations:-307 > -webkit.org/b/106344 accessibility/placeholder.html [ Failure ] Can't we unskip this on efl-wk2 as well ?
Krzysztof Czech
Comment 6 2013-06-03 02:17:25 PDT
(In reply to comment #5) > (From update of attachment 202806 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=202806&action=review > > > LayoutTests/platform/gtk-wk2/TestExpectations:-307 > > -webkit.org/b/106344 accessibility/placeholder.html [ Failure ] > > Can't we unskip this on efl-wk2 as well ? Yes we can, but there is a separate bug (112031) regarding this test on efl-wk2.
Krzysztof Czech
Comment 7 2013-06-03 02:18:41 PDT
As soon this patch lands, I'm going to enabled it on efl-wk2.
Gyuyoung Kim
Comment 8 2013-06-03 02:21:19 PDT
Comment on attachment 202806 [details] Patch rs=me according to GTK committer's informal review. However, it would be good if this patch is landed by GTK committer/reviewer.
Mario Sanchez Prada
Comment 9 2013-06-03 03:11:48 PDT
Comment on attachment 202806 [details] Patch (In reply to comment #8) > (From update of attachment 202806 [details]) > rs=me according to GTK committer's informal review. However, it would be good if this patch is landed by GTK committer/reviewer. I'm fine with this, so setting cq+ now Btw, I just realized we might like to use atk_attribute_set_free() (and probably just a raw pointer) for freeing the memory allocated by atk_object_get_attributes, instead of the method attributesClear(), but I'd rather leave that for a different commit, if others agree on that too.
WebKit Commit Bot
Comment 10 2013-06-03 03:13:32 PDT
Comment on attachment 202806 [details] Patch Rejecting attachment 202806 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 202806, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: h fuzz 3. patching file LayoutTests/platform/gtk-wk2/TestExpectations Hunk #1 FAILED at 304. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/gtk-wk2/TestExpectations.rej patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Gyuyoung Kim']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.appspot.com/results/692618
Krzysztof Czech
Comment 11 2013-06-03 03:59:20 PDT
Created attachment 203571 [details] Rebased patch
WebKit Commit Bot
Comment 12 2013-06-03 05:40:31 PDT
Comment on attachment 203571 [details] Rebased patch Clearing flags on attachment: 203571 Committed r151103: <http://trac.webkit.org/changeset/151103>
WebKit Commit Bot
Comment 13 2013-06-03 05:40:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.