[GTK][WK2] accessibility/placeholder.html is failing https://bugs.webkit.org/show_bug.cgi?id=106344

Patch by Krzysztof Czech <k.czech@samsung.com> on 2013-06-03
Reviewed by Gyuyoung Kim.

Tools:

Adds support for retrieving attribute value.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::coreAttributeToAtkAttribute):
(WTR::AccessibilityUIElement::stringAttributeValue):

LayoutTests:

Unskipping failing test. It's been fixed.

* platform/gtk-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/135398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151103 268f45cc-cd09-0410-ab3c-d52691b4dbfc